# ecgai-drawing-azure-httpfunction

./: .gitignore  host.json  publish commands.txt  pyproject.toml  requirements.txtpre-commit
create_ecg_image/: __init__.py  create_ecg_plot_request.py  create_ecg_plot_response.py  mapper.py
tests/: test_create_ecg_image.py  test_create_ecg_plot_request.py  test_factory.py
