[tool.poetry]
name = "ecgai-drawing-azure-httpfunction"
version = "0.1.0"
description = ""
authors = ["RobC <rob.clapham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
azure-functions = "^1.11.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
#azure-functions-worker = "1.0.0a6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
